--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
-## This rule redirects to an external API, signing requests with a secret
 [[redirects]]
   from = "/"
-  to = "https://www.airbnb.com/users/show/103213381"
-  status = 200
-  force = true # COMMENT: ensure that we always redirect
+  to = "https://www.airbnb.com/p/nanashomes"
+  status = 301
+  force = false # COMMENT: ensure that we always redirect
+  headers = {X-From = "Netlify"}
